# LC-framework

./: CMakeLists.txt  LCConfig.cmake.in  README.md  framework-common.h  generate_Device_LC-Framework.py  generate_Host_LC-Framework.py  lc-libpressio-plugin.cpp  lc_gpu_libpressio.h  lc_libpressio.h
preprocessors/: d_QUANT_ABS_0_f32.h  d_QUANT_ABS_0_f64.h  d_QUANT_ABS_R_f32.h  d_QUANT_ABS_R_f64.h  d_QUANT_R2R_0_f32.h  d_QUANT_R2R_0_f64.h  d_QUANT_R2R_R_f32.h  d_QUANT_R2R_R_f64.h  d_QUANT_REL_0_f32.h  d_QUANT_REL_0_f64.h  d_QUANT_REL_R_f32.h  d_QUANT_REL_R_f64.h  h_QUANT_ABS_0_f32.h  h_QUANT_ABS_0_f64.h  h_QUANT_ABS_R_f32.h  h_QUANT_ABS_R_f64.h  h_QUANT_R2R_0_f32.h  h_QUANT_R2R_0_f64.h  h_QUANT_R2R_R_f32.h  h_QUANT_R2R_R_f64.h  h_QUANT_REL_0_f32.h  h_QUANT_REL_0_f64.h  h_QUANT_REL_R_f32.h  h_QUANT_REL_R_f64.h
verifiers/: MAXR2R_f64.h
